crates/uitest/fixtures/ty/def/inherent_impl_missing_bound.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/inherent_impl_missing_bound.fe
---
error[2-0002]: `Item` is not found
   ┌─ inherent_impl_missing_bound.fe:80:34
   │
80 │ impl<T: AssocStrong> AssocBox<T::Item> {
   │                                  ^^^^ `Item` is not found

error[6-0003]: trait bound is not satisfied
  ┌─ inherent_impl_missing_bound.fe:9:9
  │
9 │ impl<T> Cache<T> {
  │         ^^^^^^^^ `T` doesn't implement `Hashable`

error[6-0003]: trait bound is not satisfied
   ┌─ inherent_impl_missing_bound.fe:10:14
   │
10 │     fn touch(self) {}
   │              ^^^^ `T` doesn't implement `Hashable`
